# erin-sub-synth

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-17-sub-synth.md
docs/superpowers/specs/: 2026-03-17-sub-synth-design.md
src/: LFO.cpp  LFO.h  LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Voice.cpp  Voice.h
test/: DSPTest.cpp
